<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ReaderCapabilities.ReadercapabilitiesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/readercaps"
                style="@style/style_large_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_reader_capabilies" />

            <include layout="@layout/white_divider" />

            <TextView
                android:id="@+id/reader_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reader details" />

            <include layout="@layout/white_divider" />

            <TextView
                android:id="@+id/title_supportedRegions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_supportedRegions"
                android:textSize="15sp"
                android:textStyle="bold" />

            <include layout="@layout/white_divider" />

            <TextView
                android:id="@+id/supportedRegions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include layout="@layout/white_divider" />

            <TextView
                android:id="@+id/title_NetworkStat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_NetworkStat"
                android:textSize="15sp"
                android:textStyle="bold" />

            <include layout="@layout/white_divider" />

            <TextView
                android:id="@+id/netwokStat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
